k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: auth-gateway
  namespace: myapp

spec:
  selector:
    app: auth-gateway

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
