k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: auth-gateway
  namespace: myapp

spec:
  ingressClassName: traefik

  rules:
    - host: auth-gateway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-gateway
                port:
                  number: 8000
